# rust-graphql-sonic

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yml  setup_project.sh  sonic.cfg
migrations/2021-02-17-153101_create_items/: up.sql
migrations/2021-03-15-204951_add_items_text_index/: down.sql  up.sql
migrations/2021-03-16-085244_add_items_text_index_btree/: down.sql  up.sql
sonic/: setup_sonic.sh  sonic.cfg  sonic.service
src/: lib.rs  routes.rs  schema.rs
src/data/: mod.rs  service.rs
src/items/: mod.rs  service.rs
src/pub_sub/: mod.rs
