[package]
name = "rust-graphql-sonic"
version = "0.1.0"
authors = ["Petar Vujovic <petarvujovic98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = "0.4.0"
actix-web = "3.3.2"
actix-web-actors = "3.0.0"
async-graphql = "2.5.11"
async-graphql-actix-web = "2.5.11"
async-trait = "0.1.42"
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
diesel_full_text_search = { git = "https://github.com/diesel-rs/diesel_full_text_search", rev = "886fe854e62e12b2f47f7e7212138a420c9fed85" }
dotenv = "0.15.0"
futures = "0.3.12"
futures-timer = "3.0.2"
jsonwebtoken = "7.2.0"
once_cell = "1.5.2"
r2d2 = "0.8.9"
serde = { version = "1.0.123", features = ["derive"] }
slab = "0.4.2"
sonic-channel = { version = "0.4.0", features = ["search", "ingest", "control"] }
