[package]
name = "rust-graphql-sonic"
version = "0.1.0"
authors = ["Petar Vujovic <petarvujovic98@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-session = "^0.4.1"
actix-web = "^3.3.2"
actix-web-actors = "^3.0.0"
async-graphql = { version = "^2.6.2", features = ["apollo_tracing"] }
async-graphql-actix-web = "^2.6.2"
async-trait = "^0.1.48"
diesel = { version = "^1.4.6", features = ["postgres", "r2d2"] }
diesel_full_text_search = { git = "https://github.com/diesel-rs/diesel_full_text_search", rev = "886fe854e62e12b2f47f7e7212138a420c9fed85" }
diesel_migrations = "^1.4.0"
dotenv = "^0.15.0"
futures = "^0.3.13"
futures-timer = "^3.0.2"
once_cell = "^1.7.2"
r2d2 = "^0.8.9"
serde = { version = "^1.0.124", features = ["derive"] }
slab = "^0.4.2"
sonic-channel = { version = "^0.4.0", features = ["search", "ingest", "control"] }

[[bin]]
name = "server"
path = "src/bin/main.rs"
test = false
doctest = false
bench = false
doc = false
edition = "2018"

[[bin]]
name = "filler"
path = "src/bin/fill-data.rs"
test = false
doctest = false
bench = false
doc = false
edition = "2018"
